fix(errorprone): assorted small bug-class fixes (singleton check IDs)
Addresses the long tail of single-occurrence ErrorProne warnings, plus
a few stragglers exposed once the per-check warning cap moved:

- WaitNotInLoop (QueuedTrash.waitForPendingOperations): wrap wait() in
  while-loop on the predicate so spurious wakeups don't return early.
- StaticAssignmentOfThrowable (MuConfigurations.loadPreferences): keep
  the deferred-error pattern but suppress with reason.
- ReturnValueIgnored (OSXDesktopAdapter): assign anyMatch result to a
  named local — its short-circuit is the goal, dutiCmdPath communicates
  the outcome.
- ReturnFromVoid (VSphereClient.connect): drop the @return tag and tidy
  the exception list.
- EqualsHashCode (CredentialsMapping, Bookmark): add hashCode() that
  matches the existing equals contract.
- ReferenceEquality (FilesTreeModel.getPathToRoot): suppress; root is a
  singleton sentinel.
- SynchronizeOnNonFinalField (CachedDirectory.cache): make the field
  final.
- NonCanonicalType (Kernel32API.FindFileHandle): suppress; W32API.HANDLE
  is the JNA alias used throughout this code.
- MissingCasesInEnumSwitch (CommandManager.buildFilter): add an explicit
  default case for irrelevant attribute values.
- LoopOverCharArray (WindowsFilenameSanitizer.sanitizeFileName): switch
  to charAt and pre-size the StringBuilder.
- InlineMeSuggester (FileConfigurationSource): suppress; we're not
  adopting Google @InlineMe.
- DoubleBraceInitialization (Column.ORDINAL_TO_ENUM_MAPPING): replace
  with Stream.collect(Collectors.toUnmodifiableMap).
- BoxedPrimitiveConstructor (MnemonicHelper.isMnemonicUsed): use
  Character.valueOf instead of new Character.
- BareDotMetacharacter (Credentials.getMaskedPassword): replace
  password.replaceAll(".", "*") with "*".repeat(length()).

Also folded in stragglers that surfaced after recompilation:
- StringCharset (CalculateChecksumJob, SplitFileJob, SendMailJob):
  pass StandardCharsets.UTF_8 instead of "utf-8"/"UTF-8".
